fix-overflow

--- a/css/style.scss
+++ b/css/style.scss
@@ -46,6 +46,7 @@ body {
   justify-content: center;
   align-items: center;
   background-color: var(--Magnolia);
+  overflow-x: hidden;
 }
 
 @media (max-width: $mobile) {
